<resources>
    <string name="app_name">What do you know about fruits?</string>
    <string name="text_email">E-mail</string>
    <string name="text_enter_you_address">Enter you address</string>
    <string name="text_password">Password</string>
    <string name="text_enter_you_password">Enter you password</string>
    <string name="text_accept_user_agreement">Accept user agreement</string>
    <string name="text_login">Login</string>
    <string name="text_incorrect_input">Incorrect login or password</string>
    <string name="text_about_pineapple">How about a delicious slice of freshly cut sweet and slightly tangy pineapple, sounds delightful, right! Well ,this amazing fruit has certainly made its way to various culinary innovations right from amping up the taste quotient of mocktails to desserts to adding a hint of taste to exotic meat recipes, pineapple is a not just a fruit, but is an experience. Most pineapple lovers indulge in this amazing fruit because of its drool-worthy taste and enchanting aroma, but did you know that this amazing delight has a lot more to offer! Pineapple is scientifically known as Ananas comosus. Not only is this fruit delicious, but at the same time it has some incredible health benefits that will simply take your love for this fruit by a notch. So, read on to know more about pineapples. Amazing health benefits of pineapple This wonder fruit traces its origin to South America. However, it was later explored by the Europeans and was named as pineapple due to its similarity to the pinecone. Enriched with the goodness of nature, this tropical fruit is a rich source of antioxidants and enzymes, which are essential in curing several diseases. What\'s More, pineapples are a powerhouse of nutrition. Right from boosting immunity, aiding in digestion, to being a dose of nutrients such as vitamins A, B, C, potassium, manganese, this wonder food makes for a perfect food for good health. Here are a few incredible health benefits of this wonder fruit: Boosts immunity Pineapple is a great source of vitamin C, antioxidants, enzymes and fiber, which helps in proper functioning of the body. Moreover, the presence of vitamin C helps in fighting cell damage and prevents joint pain and coronary diseases. Strengthens your bones Loaded with the goodness of manganese, which helps in improving bone mineral density and strengthens the bones. Pineapple helps in preventing osteoporosis in women. According to a study, daily consumption of this fruit helps in improving bone health. Helps in treating cold and cough Pineapple is a great source of vitamin C and bromelain, which helps in reducing cough causing mucus in the throat and nasal cavity. Due to its anti-inflammatory properties, it helps in curing colds and cough. Helps in treating injuries The presence of bromelain helps in reducing swelling and helps reduce loss of blood byu promoting coagulation of the blood. So, adding pineapple to your diet can help in treating these basic ailments and injuries. Reduces stress Not only is this fruit delicious, but at the same time it can lift up your mood with its taste and aroma. Moreover, they contain a good level of B vitamins which improves your brain health. And helps in better functioning of the brain and boosts your ability to deal with stress efficiently.</string>
    <string name="text_about_apple">It’s that time of year again: apple-picking season. And there are a number of good reasons why you’ll want to fill up a basket. Not only do apples taste delicious on their own or when added to dishes but they come loaded with health benefits. “Apples have been linked to numerous health benefits, including improved gut health and reduced risk of stroke, high blood pressure, diabetes, heart disease, obesity, and some cancers,” says Jessica Levinson, RDN, a culinary nutrition expert in Westchester, New York. According to the U.S. Department of Agriculture, a medium-sized apple is a good source of fiber: It contains 4.4 grams of fiber, covering 16 percent of the daily value (DV). Also, the same apple offers 8.4 milligrams of vitamin C, providing more than 9 percent of your DV, along with small amounts of other vitamins and minerals. Sarah Gold Anzlovar, RDN, the Boston-based owner of Sarah Gold Nutrition, suggests adding them to salads or to a grilled cheese, making baked apples for a healthy dessert, or cooking up some pulled chicken with apples in the slow cooker for an easy lunch or dinner. “All apples offer benefits, though the nutrition and antioxidant content will vary slightly from one apple to another — the best one to eat is the kind you enjoy,” says Anzlovar. Here’s why else the phrase “an apple a day helps keep the doctor away” may have some truth to it.</string>
    <string name="text_about_pepper">Eating hot chili peppers may extend your life, according to a new study. Researchers analyzed data from more than 16,000 Americans who were followed for an average of nearly 19 years and found that hot red chili pepper consumption was associated with a 13 percent lower risk of death, CBS News reported. The study was published in the journal PLOS One. Since this was an observational study, it offers no proof of a cause and effect relationship, but does add to the growing body of evidence that spicy foods may have health benefits that can help people live longer, according to the University of Vermont researchers. Previous studies have suggested that a spice component called capsaicin may have anti-obesity, antioxidant, anti-inflammation and anti-cancer benefits. The authors of this new study say capsaicin may also act as an antimicrobial, CBS News reported. The University of Vermont team called for further research to investigate the benefits of other spices and the effects of certain chili pepper subtypes.</string>
    <string name="text_about_pear"><![CDATA[Pears Are Seriously Good for Your Digestion Boasting 6 grams of fiber, pears have more fiber than a 1-cup serving of kale! From helping you maintain a healthy weight to reducing your risk of developing type 2 diabetes, eating enough fiber is integral to a well-balanced diet. Not to mention, we\'re very thankful for the digestive benefits a high-fiber diet provides (fiber makes your poop softer and bulkier, making it easier to go), and we love that we can get over 20 percent of our daily recommended value from a pear. Related: 10 Amazing Health Benefits of Eating More Fiber Pears Have a Low-Glycemic Index Even though pears have some natural sugar, their high fiber content ensures your blood sugar won\'t go soaring after eating one (which makes them a perfect on-the-go snack for people with diabetes) Plus, their low-glycemic index means you won\'t be hungry minutes after snacking on one. Try these tasty Roasted Pears with Prosciutto for a snack that\'ll leave you satisfied until your next meal. Related: Top High-Fiber Foods You Need in Your Life Pears Are Good for Your Heart According to Harvard Health, eating more fiber-rich foods provides wonderful health benefits. Thought to play a role in decreasing blood pressure and cholesterol, getting enough fiber in your diet decreases your risk of developing heart disease. Since pears are high in fiber and potassium (which helps counteract excess sodium), they\'re a great snack to incorporate into a heart-healthy diet! Related: Heart-Healthy Recipes Pears Are Free Radical Fighters The vitamin C in pears fight off free radicals, which can put your cells under oxidative stress and lead to chronic disease. This means eating pears-and other foods high in antioxidants-can reduce your risk of developing cancer, diabetes, heart disease, and even neurodegenerative diseases like dementia! Related: Your Anti-Aging Diet The Bottom Line With all of their health benefits, try swapping in a pear next time you\'re craving a piece of fruit. Aside from the health benefits of eating pears, the fruit is wonderful to cook with! Try them with this Arugula & Pear Salad for a healthy side dish or in this Pear Almond Crostata for a beautiful dessert. You won\'t be disappointed!]]></string>
</resources>